cmake_minimum_required(VERSION 2.8)
set(CMAKE_BUILD_TYPE Debug)
aux_source_directory(. files)
project (noeuclid)
add_executable(noeuclid ${files})
add_definitions(-std=c++11)
find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
find_package(GLEW REQUIRED)

#set(CMAKE_EXE_LINKER_FLAGS -static) 

add_definitions(-DGLEW_STATIC)
add_definitions(-DGLUT_STATIC)
add_definitions(-DGL_GLEXT_PROTOTYPES)
add_definitions(-DGLUT_DISABLE_ATEXIT_HACK)
include_directories(${GLEW_INCLUDE_PATH} ${OPENGL_INCLUDE_DIRS}  ${GLUT_INCLUDE_DIRS})
target_link_libraries(noeuclid ${GLEW_LIBRARY} ${GLUT_LIBRARY} ${OPENGL_LIBRARIES})
file(COPY rooms.txt DESTINATION .)
file(COPY tileattributes.txt DESTINATION .)
file(COPY Arial.ini DESTINATION .)
file(COPY Arial.ppm DESTINATION .)
file(COPY Shaders DESTINATION .)
